# gpu_test

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  sdl_gpu_test
include/: common.hpp
shaders/compiled/: position.vert.spv  solidColor.frag.spv
shaders/src/: position.vert.hlsl  solidColor.frag.hlsl
src/: common.cpp  main.cpp
